# PneumIOT

./: .gitignore  README.md  cc.yaml  docker-compose.yml  package-lock.json
.circleci/: config.yml
.github/workflows/: docker_tests.yml  main.yml
app/backend/: db.js  jest.config.js  package-lock.json  package.json  server.js
app/backend/tests/: index.test.js
app/bbdd/: dockerfile  init_creation.sql  insert_random_data.sql
app/bbdd/tablas/: authentication.sql  board.sql  sensor.sql  worker.sql
app/database/: dockerfile  init-db.sql  insert-data.sql  pyproject.toml  tasks.py
app/database/initial_data/: insert-average.sql  insert-board.sql  insert-doctor.sql  insert-measurements.sql  insert-patient.sql  insert-sensor.sql  insert-worker.sql  insert-worker_auth.sql
app/database/tablas/: board.sql  doctor.sql  measurement.sql  patient.sql  sensor.sql  sensor_log.sql  user_log.sql
app/database/tests/: test_database.py
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.js  config.js  index.css  theme.js
docker/: docker-compose.test.yml
docker/dev/: dev.backend.dockerfile  dev.database.dockerfile  dev.frontend.dockerfile
docker/test/database/: test.dockerfile  test.pythonEnv.dockerfile
docs/: Componentes_evaluables.aux  Componentes_evaluables.tex  Componentes_evaluables.toc  main.tex
docs/Milestones/0_Repository/: 0_Repository.md  Configuration.md  Problem.md
docs/Milestones/1_Proyect/: 1_Proyect.md
docs/bibliografia/: bibliografia.bib
docs/capitulos/: 02_Estado_del_arte.tex
docs/prefacios/: prefacio.tex
(+87 files in other folders)
